Added information to Summary, Skills and Degrees

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <button class="menuButtons"" type=" button"
             onclick="window.location.href='#contactPage';">
             <img
-              src="Images/Icons/contact1.svg"
-              title="Projects"
+              src="Images/Icons/contactInfo.svg"
+              title="Contact Information"
               width="50px"
               height="50px"
-              alt="Projects Button"
+              alt="Contact Information Button"
             />
           </li>
           <h6 class="menuButtonsTitle">Contact</h6>
@@ -128,12 +128,32 @@
                     class="mainPictures"
                     src="Images/Pictures/TRENZAS ME.jpg"
                     title="Hello! This is me"
-                    width="250px"
-                    height="250px"
+                    width="275px"
+                    height="275px"
                     alt="I was supposed to appear here..."
                 /></a>
                 <br />
-                <a
+
+                <div class="container">
+                  <div class="infoCard">
+                    <h3 id="summary">
+                      <center>Summary:</center>
+                    </h3>
+                    <p>
+                      I'm a dedicated Puerto Rican Computer Engineering
+                      Graduate, from the Polytechnic University of Puerto Rico.
+                      Being a 22 year old, my goal is to implement and improve
+                      my accumulated knowledge and skills through real life
+                      experiences and projects. I'm also open to learn
+                      everything that I can for my personal and professional
+                      growth. On my personal life, I enjoy going to the beach,
+                      hanging out with friends, and playing basketball and
+                      videogames. I hope you enjoy my Portfolio!
+                    </p>
+                  </div>
+                </div>
+
+                <!--  <a
                   ><img
                     class="mainPictures"
                     src="Images/Pictures/BEACH.jpg"
@@ -141,53 +161,73 @@
                     width="250px"
                     height="250px"
                     alt="Picture of a Beach in Puerto Rico"
-                /></a>
+                /></a>-->
               </center>
             </div>
           </div>
 
           <div class="col">
-            <div class="container">
-              <div class="infoCard">
-                <h3 id="summary">
-                  <center>Summary:</center>
-                </h3>
-                <p>
-                  I'm a Puerto Rican Senior Computer Engineering Student, from
-                  the Polytechnic University of Puerto Rico. I have 22 years old
-                  looking to improve my knowledge and skills with real life
-                  experience.
-                </p>
-              </div>
-            </div>
-
             <div class="placeholder"></div>
             <div class="container">
               <div class="infoCard">
-                <h3 id="summary">
+                <h3 id="skills">
                   <center>Skills:</center>
                 </h3>
-                <p>
-                  I'm a Puerto Rican Senior Computer Engineering Student, from
-                  the Polytechnic University of Puerto Rico. I have 22 years old
-                  looking to improve my knowledge and skills with real life
-                  experience.
-                </p>
+                <div class="row">
+                  <div class="col">
+                    <h4 class="skillHeading">Soft Skills:</h4>
+                    <div class="skills">
+                      <ul>
+                        <li>Quick Learner</li>
+                        <li>Team Worker</li>
+                        <li>Multitasker</li>
+                        <li>Problem Solver</li>
+                        <li>Communicative</li>
+                        <li>Respectful</li>
+                        <li>Creative</li>
+                        <li>Critical Thinker</li>
+                        <li>Patient</li>
+                        <li>Flexible</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <h4 class="skillHeading">Technical Skills:</h4>
+                    <div class="skills">
+                      <ul>
+                        <li>Sales</li>
+                        <li>Data Entry</li>
+                        <li>Customer Service</li>
+                        <li>POS Knowledge</li>
+                        <li>Microsoft Office</li>
+                        <li>Bilingual</li>
+                        <li>Programming</li>
+                        <li>Data Analysis</li>
+                        <li>Engineering</li>
+                        <li>Design</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
             <div class="placeholder"></div>
             <div class="container">
               <div class="infoCard">
-                <h3 id="summary">
-                  <center>Awards, Licenses & Certifications:</center>
+                <h3 id="awards">
+                  <center>Degrees, Awards, Licenses & Certifications:</center>
                 </h3>
-                <p>
-                  I'm a Puerto Rican Senior Computer Engineering Student, from
-                  the Polytechnic University of Puerto Rico. I have 22 years old
-                  looking to improve my knowledge and skills with real life
-                  experience.
-                </p>
+                <ul>
+                  <li>
+                    Bachelor's Degree of Science in Computer Engineering (Cum
+                    Laude)
+                  </li>
+                  <li>Driver's License</li>
+                  <li>High School Diploma</li>
+                  <li>High School Valedictorian Award</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -200,7 +240,7 @@
       <br /><br />
 
       <center>
-        <h2>Programming Languages & Software:</h2>
+        <h2>Technologies Stack:</h2>
       </center>
 
       <br />
@@ -1131,9 +1171,9 @@
                         >
                           <img
                             src="Images/Social Media/x.svg"
-                            title="Twitter"
-                            width="30px"
-                            height="30px"
+                            title="X"
+                            width="25px"
+                            height="25px"
                             alt="X Button"
                           />
                         </button>
@@ -1153,8 +1193,8 @@
                           <img
                             src="Images/Tech Stack/github.svg"
                             title="GitHub"
-                            width="30px"
-                            height="30px"
+                            width="35px"
+                            height="35px"
                             alt="GitHub Button"
                           />
                         </button>
@@ -1192,8 +1232,8 @@
                           <img
                             src="Images/Social Media/discord.svg"
                             title="LinkedIn"
-                            width="30px"
-                            height="30px"
+                            width="35px"
+                            height="35px"
                             alt="LinkedIn Button"
                           />
                         </button>
@@ -1206,7 +1246,11 @@
                 <div class="resumeCard">
                   <div class="col">
                     <div class="container">
-                      <a id="resumeButton" type="button" onclick="href='';">
+                      <a
+                        id="resumeButton"
+                        type="button"
+                        onclick="href='https://drive.google.com/uc?id=1RnokdGCcXRmXDb7dFUEhO5OL5lO1PT3C&export=download';"
+                      >
                         <h6>Resumé.pdf</h6>
                         <img
                           src="Images/Icons/downloadArrow.svg"
