Bug fixes and changes for responsiveness

--- a/index.html
+++ b/index.html
@@ -251,233 +251,219 @@
             </h3>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
-                <div class="container">
-                  <button type="button" id="HTMLButton" class="progLangCube">
-                    <h6 class="progLangName">HTML</h6>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/html.svg"
-                      title="HTML"
-                      width="75px"
-                      height="75px"
-                      alt="HTML Logo"
-                    />
-                  </button>
-                  <span id="HTMLInfo" class="hide">
-                    <div class="definitions">
-                      <b>HTML</b>: HTML is the language in which most websites
-                      are written. HTML is used to create pages and make them
-                      functional. HTML stands for Hyper Text Markup Language.
-                      <br />
-                      <cite>
-                        <a class="defSource" href="https://html.com/">
-                          ~ HTML.com
-                        </a></cite
-                      >
-                    </div>
-                  </span>
-                </div>
+                <button type="button" id="HTMLButton" class="progLangCube">
+                  <h6 class="progLangName">HTML</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/html.svg"
+                    title="HTML"
+                    width="75px"
+                    height="75px"
+                    alt="HTML Logo"
+                  />
+                </button>
+                <span id="HTMLInfo" class="hide">
+                  <div class="definitions">
+                    <b>HTML</b>: HTML is the language in which most websites are
+                    written. HTML is used to create pages and make them
+                    functional. HTML stands for Hyper Text Markup Language.
+                    <br />
+                    <cite>
+                      <a class="defSource" href="https://html.com/">
+                        ~ HTML.com
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
 
               <div class="col">
-                <div class="container">
-                  <button type="button" id="CSSButton" class="progLangCube">
-                    <h6 class="progLangName">CSS</h6>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/css.svg"
-                      title="CSS"
-                      width="75px"
-                      height="75px"
-                      alt="CSS Logo"
-                    />
-                  </button>
-                  <span id="CSSInfo" class="hide">
-                    <div class="definitions">
-                      <b>CSS</b>: Cascading Style Sheets (CSS) is a simple
-                      mechanism for adding style (e.g., fonts, colors, spacing)
-                      to Web documents.
-                      <br />
-                      <cite>
-                        <a
-                          class="defSource"
-                          href="https://www.w3.org/Style/CSS/Overview.en.html"
-                        >
-                          ~ W3.org
-                        </a></cite
+                <button type="button" id="CSSButton" class="progLangCube">
+                  <h6 class="progLangName">CSS</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/css.svg"
+                    title="CSS"
+                    width="75px"
+                    height="75px"
+                    alt="CSS Logo"
+                  />
+                </button>
+                <span id="CSSInfo" class="hide">
+                  <div class="definitions">
+                    <b>CSS</b>: Cascading Style Sheets (CSS) is a simple
+                    mechanism for adding style (e.g., fonts, colors, spacing) to
+                    Web documents.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://www.w3.org/Style/CSS/Overview.en.html"
                       >
-                    </div>
-                  </span>
-                </div>
+                        ~ W3.org
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
 
               <div class="col">
-                <div class="container">
-                  <button type="button" id="JSButton" class="progLangCube">
-                    <h6 class="progLangName">JavaScript</h6>
-                    <div class="space3px"></div>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/javascript.svg"
-                      title="JavaScript"
-                      width="65px"
-                      height="65px"
-                      alt="JavaScript Logo"
-                    />
-                  </button>
-                  <span id="JSInfo" class="hide">
-                    <div class="definitions">
-                      <b>JavaScript</b>: JavaScript is a scripting or
-                      programming language that allows you to implement complex
-                      features on web pages like displaying timely content
-                      updates, interactive maps, animated 2D/3D graphics,
-                      scrolling video jukeboxes, etc.
-                      <br />
-                      <cite>
-                        <a
-                          class="defSource"
-                          href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript"
-                        >
-                          ~ Mozilla.org
-                        </a></cite
+                <button type="button" id="JSButton" class="progLangCube">
+                  <h6 class="progLangName">JavaScript</h6>
+                  <div class="space3px"></div>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/javascript.svg"
+                    title="JavaScript"
+                    width="65px"
+                    height="65px"
+                    alt="JavaScript Logo"
+                  />
+                </button>
+                <span id="JSInfo" class="hide">
+                  <div class="definitions">
+                    <b>JavaScript</b>: JavaScript is a scripting or programming
+                    language that allows you to implement complex features on
+                    web pages like displaying timely content updates,
+                    interactive maps, animated 2D/3D graphics, scrolling video
+                    jukeboxes, etc.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript"
                       >
-                    </div>
-                  </span>
-                </div>
+                        ~ Mozilla.org
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
             </div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
-                <div class="container">
-                  <button type="button" id="PythonButton" class="progLangCube">
-                    <h6 class="progLangName">Python</h6>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/python.svg"
-                      title="Python"
-                      width="75px"
-                      height="75px"
-                      alt="Python Logo"
-                    />
-                  </button>
-                  <span id="PythonInfo" class="hide">
-                    <div class="definitions">
-                      <b>Python</b>: Python is an interpreted, interactive,
-                      object-oriented programming language. It incorporates
-                      modules, exceptions, dynamic typing, very high level
-                      dynamic data types, and classes. It supports multiple
-                      programming paradigms beyond object-oriented programming,
-                      such as procedural and functional programming. Python
-                      combines remarkable power with very clear syntax.
-                      <br />
-                      <cite>
-                        <a
-                          class="defSource"
-                          href="https://docs.python.org/3/faq/general.html#what-is-python"
-                        >
-                          ~ Python.org
-                        </a></cite
+                <button type="button" id="PythonButton" class="progLangCube">
+                  <h6 class="progLangName">Python</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/python.svg"
+                    title="Python"
+                    width="75px"
+                    height="75px"
+                    alt="Python Logo"
+                  />
+                </button>
+                <span id="PythonInfo" class="hide">
+                  <div class="definitions">
+                    <b>Python</b>: Python is an interpreted, interactive,
+                    object-oriented programming language. It incorporates
+                    modules, exceptions, dynamic typing, very high level dynamic
+                    data types, and classes. It supports multiple programming
+                    paradigms beyond object-oriented programming, such as
+                    procedural and functional programming. Python combines
+                    remarkable power with very clear syntax.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://docs.python.org/3/faq/general.html#what-is-python"
                       >
-                    </div>
-                  </span>
-                </div>
+                        ~ Python.org
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
               <div class="col">
-                <div class="container">
-                  <button type="button" id="CPPButton" class="progLangCube">
-                    <h6 class="progLangName">C++</h6>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/c++.svg"
-                      title="C++"
-                      width="75px"
-                      height="75px"
-                      alt="C++ Logo"
-                    />
-                  </button>
-                  <span id="CPPInfo" class="hide">
-                    <div class="definitions">
-                      <b>C++</b>: C++ is a cross-platform language that can be
-                      used to create high-performance applications.
-                      <br />
-                      <cite>
-                        <a
-                          class="defSource"
-                          href="https://www.w3schools.com/cpp/cpp_intro.asp"
-                        >
-                          ~ W3Schools.com
-                        </a></cite
+                <button type="button" id="CPPButton" class="progLangCube">
+                  <h6 class="progLangName">C++</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/c++.svg"
+                    title="C++"
+                    width="75px"
+                    height="75px"
+                    alt="C++ Logo"
+                  />
+                </button>
+                <span id="CPPInfo" class="hide">
+                  <div class="definitions">
+                    <b>C++</b>: C++ is a cross-platform language that can be
+                    used to create high-performance applications.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://www.w3schools.com/cpp/cpp_intro.asp"
                       >
-                    </div>
-                  </span>
-                </div>
+                        ~ W3Schools.com
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
               <div class="col">
-                <div class="container">
-                  <button type="button" id="DartButton" class="progLangCube">
-                    <h6 class="progLangName">Dart</h6>
-                    <div class="space5px"></div>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/dart.svg"
-                      title="Dart"
-                      width="80px"
-                      height="40px"
-                      alt="Dart Logo"
-                    />
-                  </button>
-                  <span id="DartInfo" class="hide">
-                    <div class="definitions">
-                      <b>Dart</b>: Dart is a client-optimized language for
-                      developing fast apps on any platform. It&apos;s goal is to
-                      offer the most productive programming language for
-                      multi-platform development, paired with a flexible
-                      execution runtime platform for app frameworks.
-                      <br />
-                      <cite>
-                        <a class="defSource" href="https://dart.dev/overview">
-                          ~ Dart.dev
-                        </a></cite
-                      >
-                    </div>
-                  </span>
-                </div>
+                <button type="button" id="DartButton" class="progLangCube">
+                  <h6 class="progLangName">Dart</h6>
+                  <div class="space5px"></div>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/dart.svg"
+                    title="Dart"
+                    width="80px"
+                    height="40px"
+                    alt="Dart Logo"
+                  />
+                </button>
+                <span id="DartInfo" class="hide">
+                  <div class="definitions">
+                    <b>Dart</b>: Dart is a client-optimized language for
+                    developing fast apps on any platform. It&apos;s goal is to
+                    offer the most productive programming language for
+                    multi-platform development, paired with a flexible execution
+                    runtime platform for app frameworks.
+                    <br />
+                    <cite>
+                      <a class="defSource" href="https://dart.dev/overview">
+                        ~ Dart.dev
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
             </div>
             <div class="row row-cols-3 justify-content-center">
               <div class="col">
-                <div class="container">
-                  <button type="button" id="SQLButton" class="progLangCube">
-                    <h6 class="progLangName">SQL</h6>
-                    <img
-                      class="progLangIcon"
-                      src="Images/Tech Stack/sql.svg"
-                      title="SQL"
-                      width="70px"
-                      height="70px"
-                      alt="SQL Logo"
-                    />
-                  </button>
-                  <span id="SQLInfo" class="hide">
-                    <div class="definitions">
-                      <b>SQL</b>: Structured query language (SQL) is a
-                      programming language for storing and processing
-                      information in a relational database. A relational
-                      database stores information in tabular form, with rows and
-                      columns representing different data attributes and the
-                      various relationships between the data values.
-                      <br />
-                      <cite>
-                        <a
-                          class="defSource"
-                          href="https://aws.amazon.com/what-is/sql/#:~:text=Structured%20query%20language%20(SQL)%20is%20a%20standard%20language%20for%20database,undergoes%20continual%20upgrades%20and%20improvements."
-                        >
-                          ~ AWS.Amazon.com
-                        </a></cite
+                <button type="button" id="SQLButton" class="progLangCube">
+                  <h6 class="progLangName">SQL</h6>
+                  <img
+                    class="progLangIcon"
+                    src="Images/Tech Stack/sql.svg"
+                    title="SQL"
+                    width="70px"
+                    height="70px"
+                    alt="SQL Logo"
+                  />
+                </button>
+                <span id="SQLInfo" class="hide">
+                  <div class="definitions">
+                    <b>SQL</b>: Structured query language (SQL) is a programming
+                    language for storing and processing information in a
+                    relational database. A relational database stores
+                    information in tabular form, with rows and columns
+                    representing different data attributes and the various
+                    relationships between the data values.
+                    <br />
+                    <cite>
+                      <a
+                        class="defSource"
+                        href="https://aws.amazon.com/what-is/sql/#:~:text=Structured%20query%20language%20(SQL)%20is%20a%20standard%20language%20for%20database,undergoes%20continual%20upgrades%20and%20improvements."
                       >
-                    </div>
-                  </span>
-                </div>
+                        ~ AWS.Amazon.com
+                      </a></cite
+                    >
+                  </div>
+                </span>
               </div>
             </div>
           </div>
