--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -109,7 +117,7 @@
       <!--Text Greeting-->
       <div id="greeting">
         <center>
-          <h2 class="greeting">Hello,</h2>
+          <h2 class="greeting typing-effect">Hello,</h2>
           <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
           <h4 class="greeting">Computer Engineering Graduate</h4>
         </center>
