Changed Summary Information

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap"
       rel="stylesheet"
@@ -117,7 +115,7 @@
       <!--Text Greeting-->
       <div id="greeting">
         <center>
-          <h2 class="greeting typing-effect">Hello,</h2>
+          <h2 class="greeting">Hello,</h2>
           <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
           <h4 class="greeting">Computer Engineering Graduate</h4>
         </center>
@@ -136,8 +134,8 @@
                     class="mainPictures"
                     src="Images/Pictures/TRENZAS ME.jpg"
                     title="Hello! This is me"
-                    width="295px"
-                    height="295px"
+                    width="275px"
+                    height="275px"
                     alt="I was supposed to appear here..."
                 /></a>
                 <br />
@@ -149,14 +147,17 @@
                   <center>Summary:</center>
                 </h3>
                 <p>
-                  I'm a dedicated Puerto Rican Computer Engineering Graduate,
-                  from the Polytechnic University of Puerto Rico. Being a 22
-                  year old, my goal is to implement and improve my accumulated
-                  knowledge and skills through real life experiences and
-                  projects. I'm also open to learn everything that I can for my
-                  personal and professional growth. On my personal life, I enjoy
-                  going to the beach, hanging out with friends, and playing
-                  basketball and videogames. I hope you enjoy my Portfolio!
+                  I'm a 22-year-old graduate in Computer Engineering from
+                  Polytechnic University of Puerto Rico, with the goal of
+                  applying my knowledge through real projects. Beyond studies, I
+                  find joy in going to the beach, socializing with friends, and
+                  playing basketball and videogames.
+                </p>
+
+                <p>
+                  Below you can find my Technology Stack expertise, projects,
+                  and contact info. Use the upper left menu for easier
+                  navigation. Enjoy exploring!
                 </p>
               </div>
             </div>
