Added a copyright footer

--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@
       </div>
       <!-- end contact section-->
     </section>
-
-    <footer></footer>
+    <br />
+    <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
   </body>
 </html>
