--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
+    <!-- Google Font Link-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap"
       rel="stylesheet"
     />
+    <!-- Pageclip Link (Serverless Form Handling)-->
+    <link
+      rel="stylesheet"
+      href="https://s.pageclip.co/v1/pageclip.css"
+      media="screen"
+    />
+    <!-- Stylesheet Link-->
     <link href="Styles/dayDesign.css" type="text/css" rel="stylesheet" />
+
+    <!-- Bootstrap Link-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+
     <meta
       name="description"
       content="This webpage contains information about Jadnell Reyes, 
@@ -29,12 +40,6 @@
 
   <body>
     <header></header>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-
     <!-- One Button Navigation Bar-->
     <div class="navBar">
       <div class="menu">
@@ -103,7 +108,6 @@
         </ul>
       </div>
     </div>
-    <script src="scripts/navBar.js"></script>
 
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage">
@@ -818,8 +822,6 @@
       </div>
     </section>
 
-    <script src="scripts/techStackButtons.js"></script>
-
     <!-- PROJECTS PAGE -->
     <section id="projectsPage">
       <br /><br />
@@ -1140,8 +1142,6 @@
       </div>
     </section>
 
-    <script src="scripts/imageSlideshow.js"></script>
-
     <section id="contactPage">
       <br />
       <h4 id="socialMedia">
@@ -1292,12 +1292,17 @@
                   </h3>
 
                   <!-- Contact Form: -->
-                  <div class="form">
+                  <form
+                    action="https://send.pageclip.co/CAH0P5X4x3AsDEPAqnhl4MqM62FY8Ndd/contactForm"
+                    class="pageclip-form form"
+                    method="post"
+                  >
                     <input
                       type="text"
                       class="formButtons"
                       id="firstName"
                       placeholder="First Name:"
+                      name="firstName"
                       required
                     />
                     <input
@@ -1305,6 +1310,7 @@
                       class="formButtons"
                       id="lastName"
                       placeholder="Last Name:"
+                      name="lastName"
                       required
                     />
 
@@ -1313,26 +1319,30 @@
                       class="formButtons"
                       id="email"
                       placeholder="Email:"
+                      name="email"
                       required
                     />
 
                     <textarea
+                      type="textarea"
                       placeholder="Message:"
                       id="message"
                       class="formButtons"
+                      name="message"
+                      value="Hello how are you?"
                       required
                     ></textarea>
 
                     <button
-                      onclick=""
+                      type="submit"
                       id="submitButton"
-                      class="formButtons"
-                      disabled
+                      class="pageclip-form__submit formButtons"
+                      value="Send"
                     >
-                      Submit
+                      Send
                     </button>
                     <!-- end contact form -->
-                  </div>
+                  </form>
                   <!-- end infoCard-->
                 </div>
                 <!-- end container-->
@@ -1348,5 +1358,16 @@
     </section>
     <br />
     <footer>Copyright © 2023 Jadnell Reyes. All Rights Reserved</footer>
+
+    <!-- SCRIPTS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <script src="scripts/navBar.js"></script>
+    <script src="scripts/techStackButtons.js"></script>
+    <script src="scripts/imageSlideshow.js"></script>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
 </html>
