Minor design changes and bug fixes

--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@
               </div>
               <div class="col">
                 <button type="button" id="DartButton" class="progLangCube">
-                  <h6 class="progLangName">Dart</h6>
-                  <div class="space5px"></div>
+                  <h6 id="dartTitle" class="progLangName">Dart</h6>
                   <img
+                    id="dartImage"
                     class="progLangIcon"
                     src="Images/Tech Stack/dart.svg"
                     title="Dart"
@@ -1295,6 +1295,7 @@
                     action="https://send.pageclip.co/CAH0P5X4x3AsDEPAqnhl4MqM62FY8Ndd/contactForm"
                     class="pageclip-form form"
                     method="post"
+                    onsubmit=""
                   >
                     <input
                       type="text"
