Minor changes and bug fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta
       name="description"
       content="This webpage contains information about Jadnell Reyes, 
-    a Puerto Rican Computer Engineering Student"
+    a Puerto Rican Computer Engineering Graduate"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -104,21 +104,25 @@
               alt="Contact Information Button"
             />
           </li>
-          <h6 class="menuButtonsTitle">Contact</h6>
+          <h6 class="menuButtonsTitle">Contact Info</h6>
         </ul>
       </div>
     </div>
+
+    <!-- Theme Changer Button -->
 
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage">
       <br /><br />
       <!--Text Greeting-->
-      <div id="greeting">
-        <center>
-          <h2 class="greeting">Hello,</h2>
-          <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
-          <h4 class="greeting">Computer Engineering Graduate</h4>
-        </center>
+      <div class="container">
+        <div id="greeting">
+          <center>
+            <h2 class="greeting">Hello,</h2>
+            <h1 class="greeting">my name is Jadnell H. Reyes Pérez</h1>
+            <h4 class="greeting">Computer Engineering Graduate</h4>
+          </center>
+        </div>
       </div>
 
       <br />
@@ -253,7 +257,7 @@
       <br />
 
       <div class="container">
-        <div class="techStackCard">
+        <div id="progLangCard" class="techStackCard">
           <div class="container text-center">
             <h3 id="frontEnd">
               <center>Programming Languages:</center>
@@ -272,6 +276,7 @@
                   />
                 </button>
                 <span id="HTMLInfo" class="hide">
+                  <div class="blurryBg"></div>
                   <div class="definitions">
                     <b>HTML</b>: HTML is the language in which most websites are
                     written. HTML is used to create pages and make them
